<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/curve_toolbar_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/value_50dp"
        android:paddingTop="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_16dp"
            android:layout_marginRight="@dimen/value_20dp"
            android:src="@drawable/hello" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_selamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selamat"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/value_20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/value_20dp"
                android:text="Hay andre"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exit_to_app_black_24dp" />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcfcfc"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <!--One Parrent View-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <!--One CardView-->
                <android.support.v7.widget.CardView
                    android:id="@+id/profile"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <!--One Nested Parrent View-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundpurple"
                            android:padding="10dp"
                            android:src="@drawable/profile" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/profile"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/setting"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                    <!--End One Nested Parrent View-->
                </android.support.v7.widget.CardView>
                <!--End One CardView-->

                <!--Two CardView-->
                <android.support.v7.widget.CardView
                    android:id="@+id/laporan"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <!--Two Nested Parrent View-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cercleshape"
                            android:padding="10dp"
                            android:src="@drawable/lap" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/laporan"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/desc_lap"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                    <!--End Two Nested Parrent View-->
                </android.support.v7.widget.CardView>
                <!--End Two CardView-->
            </LinearLayout>
            <!--End One Parrent View-->

            <!--Two Parrent View-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <!--One CardView-->
                <android.support.v7.widget.CardView
                    android:id="@+id/insert_lap"
                    android:layout_width="340dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <!--One Nested Parrent View-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/cerclebackgroundgreen"
                            android:padding="10dp"
                            android:src="@drawable/lap_insert" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/tambah_lap"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="@color/lightgray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/desc_insert_lap"
                            android:textColor="@android:color/darker_gray" />

                    </LinearLayout>
                    <!--One Nested Parrent View-->
                </android.support.v7.widget.CardView>
                <!--End One CardView-->
            </LinearLayout>
            <!--End Two Parrent View-->
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>