<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/value_10dp"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_menus"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/value_5dp"
                android:layout_marginLeft="@dimen/value_16dp"
                android:layout_marginRight="@dimen/value_16dp"
                android:layout_marginTop="@dimen/value_5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    tools:text="12/2/2017" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/asset"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_nama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/asset"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/jns"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_jenis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/jns"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/jml_asset"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/txt_jml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/jml_asset"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:background="@color/yello">

                    <TextView
                        android:layout_width="@dimen/width"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/status"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="@string/titik_dua"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/appbar_padding_top"
                        android:text="Menunggu"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_marginTop="@dimen/value_5dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_separator" />

</LinearLayout>