<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/activity_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="8sp"
                android:text="Profil PCM"
                android:textColor="#4d4d4d"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_close_black_24"
                android:tint="@color/gradient_2" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_separator"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:background="@color/bg_separator" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_simpan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrapper"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/bg_input_layout_form"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:enabled="false"
                    android:background="@null"
                    android:hint="@string/id"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/bg_input_layout_form"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:background="@null"
                    android:hint="@string/nama"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/bg_input_layout_form"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:background="@null"
                    android:hint="@string/email"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/bg_input_layout_form"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:background="@null"
                    android:hint="@string/jml_alamat"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@drawable/bg_input_layout_form"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_half"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_margin_half"
                    android:paddingRight="@dimen/activity_margin_half"
                    android:textCursorDrawable="@null" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="Simpan"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>